--- a/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
+++ b/lessons/02_Classes_and_Objects/00_Classes_and_Objects.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T17:58:52.281983Z",
@@ -475,7 +475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python-Games",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -489,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
